--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,9 @@ website:
       - href: weekly-notes/
         text: Weekly Notes
         menu: 
-          - 
+          - href: weekly-notes/week-01-notes.qmd
+          - href: weekly-notes/week-02-notes.qmd
+            text: Week 02
 
 format:
   html:
