--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - text: Labs
       - text: Weekly Notes
           menu:
            - href: weekly-notes/week-01-notes.qmd
