--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,9 @@ website:
       - text: Weekly Notes
           menu:
            - href: weekly-notes/week-01-notes.qmd
+             text: week-01-notes
            - href: weekly-notes/week-02-notes.qmd
+             text: week-02-notes
 format:
   html:
     theme: cosmo
