--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,9 @@ website:
       - href: index.qmd
         text: Home
       - text: Labs
+        menu:
+        - href: labs/lab0/scripts/lab0_template.qmd
+          text: Lab0 
       - text: Weekly Notes
         menu:
         - href: weekly-notes/week-01-notes.qmd
