--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,12 +12,18 @@ website:
         menu:
         - href: labs/lab0/scripts/lab0_template.qmd
           text: Lab 0 
+        - href: labs/lab1
+          text: Lab 1 
       - text: Weekly Notes
         menu:
         - href: weekly-notes/week-01-notes.qmd
           text: Week 01
         - href: weekly-notes/week-02-notes.qmd
           text: Week 02
+      - text: Assignments
+        menu:
+        - href: Assignments/assignment_1/assignment1_template.qmd
+          text: "Assignment 1: Census Data Exploration"
 format:
   html:
     theme: cosmo
